--- a/Project.toml
+++ b/Project.toml
@@ -6,14 +6,17 @@ version = "0.1.0"
 [deps]
 BoostFractor = "222d2961-0b53-58be-99ce-9613a82efb32"
 ClusterManagers = "34f1f09b-3a8b-5176-ab39-66d58a4d544e"
+Colors = "5ae59095-9a9b-59fe-a467-6f913c188581"
 DSP = "717857b8-e6f2-59f4-9121-6e50c889abd2"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 DelimitedFiles = "8bb1440f-4735-579b-a4ab-409b98df4dab"
 Distances = "b4f34e82-e78d-54a5-968a-f98e89d6e8f7"
 Distributed = "8ba89e20-285c-5b6f-9357-94700520ee1b"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
+Gaston = "4b11ee91-296f-5714-9832-002c20994614"
 Glob = "c27321d9-0574-5035-807b-f59d2c89b15c"
 HCubature = "19dc6840-f33b-545b-b366-655c7e3ffd49"
+InspectDR = "d0351b0e-4b05-5898-87b3-e2a8edfddd1d"
 Interpolations = "a98d9a8b-a2ab-59e6-89dd-64a1c18fca59"
 JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
 LineSearches = "d3d80556-e9d4-5f37-9878-2ab0fcc64255"
@@ -22,6 +25,11 @@ LsqFit = "2fda8390-95c7-5789-9bda-21331edee243"
 Match = "7eb4fadd-790c-5f42-8a69-bfa0b872bfbf"
 Optim = "429524aa-4258-5aef-a3af-852621145aeb"
 OrderedCollections = "bac558e1-5e72-5ebc-8fee-abe8a469f55d"
+PGFPlots = "3b7a836e-365b-5785-a47d-02c71176b4aa"
+PGFPlotsX = "8314cec4-20b6-5062-9cdb-752b83310925"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
+PyPlot = "d330b81b-6aea-500a-939a-2ce795aea3ee"
 ReverseDiff = "37e2e3b7-166d-5795-8a7a-e32c996b4267"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
+StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
+StatsPlots = "f3b207a7-027a-5e70-b257-86293d7955fd"
