--- a/Project.toml
+++ b/Project.toml
@@ -27,9 +27,11 @@ Optim = "429524aa-4258-5aef-a3af-852621145aeb"
 OrderedCollections = "bac558e1-5e72-5ebc-8fee-abe8a469f55d"
 PGFPlots = "3b7a836e-365b-5785-a47d-02c71176b4aa"
 PGFPlotsX = "8314cec4-20b6-5062-9cdb-752b83310925"
+ParallelDataTransfer = "2dcacdae-9679-587a-88bb-8b444fb7085b"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 PyPlot = "d330b81b-6aea-500a-939a-2ce795aea3ee"
 ReverseDiff = "37e2e3b7-166d-5795-8a7a-e32c996b4267"
+SlurmClusterManager = "c82cd089-7bf7-41d7-976b-6b5d413cbe0a"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 StatsPlots = "f3b207a7-027a-5e70-b257-86293d7955fd"
